--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -194,7 +194,7 @@ bShowGrid=False
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 SceneComponent=
-SceneComponent=
+SceneComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -253,7 +253,7 @@ BrushComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Color Grading.Color Grading
 StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
-StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Color Grading.Color Grading
+StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 sm_Mannequin_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 sm_Mannequin_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Color Grading.Color Grading
 Actor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
@@ -409,7 +409,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Clock
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Tashan/consoletable
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
-ContentBrowserTab1.SelectedPaths=/Game/Cinematics/Sequences/Stairwell_scene_shots
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Tashan/suitcases
 None=======
 None=======
 None=======
@@ -848,6 +848,12 @@ bp_stainedglasslight_C="\"Object\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LowerHemisphereColor\" \"Object.Light.LightComponent.Object.Light.LightColor\" \"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
 wardrobe_C="\"Object\" "
 MovieSceneUserThumbnailSettings="\"Object\" "
+BrushBaseProperties="\"Object\" "
+MeshSelectionToolProperties="\"Object\" "
+PolygroupLayersProperties="\"Object\" "
+MeshElementsVisualizerProperties="\"Object\" "
+MeshStatisticsProperties="\"Object\" "
+GroupEdgeInsertionProperties="\"Object\" "
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1454,6 +1460,7 @@ Actor.TransformCommon=True
 Actor.Networking=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -2121,6 +2128,14 @@ BrushComponent.Tags=True
 BrushComponent.Cooking=True
 MovieSceneUserThumbnailSettings.General=True
 Texture2D.Interchange =True
+BrushBaseProperties.Brush=True
+MeshSelectionToolProperties.Selection=True
+PolygroupLayersProperties.PolyGroup Layer=True
+MeshSelectionEditActions.SelectionEdits=True
+MeshSelectionMeshEditActions.MeshEdits=True
+MeshElementsVisualizerProperties.MeshElementVisualization=True
+MeshStatisticsProperties.MeshStatistics=True
+GroupEdgeInsertionProperties.InsertEdge=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2232,7 +2247,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Cinematics/Sequences/Stairwell_scene_shots/Stairwell_scene_shotsRoot.Stairwell_scene_shotsRoot
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2248,26 +2262,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cinematics/Sequences/Stairwell_scene_shots/Stairwell_scene_shotsRoot
-MRUItem1=/Game/Group_Assets/Tashan/box/box
-MRUItem2=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_Normal
-MRUItem4=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_BaseColor
-MRUItem5=/Game/Group_Assets/Tashan/box/mat_box
-MRUItem6=/DatasmithContent/Materials/FBXImporter/VRED/Plastic
-MRUItem7=/Game/Group_Assets/Tashan/fabriholder/fabhold
-MRUItem8=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem9=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst_Inst_Inst1
-MRUItem10=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst_Inst_Inst
-MRUItem11=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst_Inst
-MRUItem12=/Game/Megascans/Surfaces/Blue_Cloth_scklh0p0/MI_Blue_Cloth_scklh0p0_4K_Inst
-MRUItem13=/Game/Megascans/Surfaces/Blue_Cloth_scklh0p0/MI_Blue_Cloth_scklh0p0_4K
-MRUItem14=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst_Inst1
-MRUItem15=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst
-MRUItem16=/Game/Group_Materials/Metal/MM_Metal
-MRUItem17=/Game/Group_Materials/Metal/MM_Metal_Inst1
-MRUItem18=/Game/Group_Materials/Glass/Glass
-MRUItem19=/Game/Group_Materials/Glass/Glass_Inst
+MRUItem0=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2
+MRUItem1=/Game/Group_Assets/Tashan/box/luagge2
+MRUItem2=/Game/Group_Assets/Tashan/box/mat_lugt2
+MRUItem3=/Game/Group_Assets/Tashan/box/mat_lugt1
+MRUItem4=/Game/Group_Assets/Tashan/box/luagge2_leather_OcclusionRoughnessMetallic
+MRUItem5=/Game/Group_Assets/Tashan/box/luagge2_leather_Normal
+MRUItem6=/Game/Group_Assets/Tashan/box/luagge2_leather_BaseColor
+MRUItem7=/Game/Group_Assets/Tashan/box/luagge2_gold_Normal
+MRUItem8=/Game/Group_Assets/Tashan/box/luagge2_gold_BaseColor
+MRUItem9=/Game/Group_Assets/Tashan/box/luagge2_gold_OcclusionRoughnessMetallic
+MRUItem10=/Game/Cinematics/Sequences/Stairwell_scene_shots/Stairwell_scene_shotsRoot
+MRUItem11=/Game/Group_Assets/Tashan/box/box
+MRUItem12=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem13=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_Normal
+MRUItem14=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_BaseColor
+MRUItem15=/Game/Group_Assets/Tashan/box/mat_box
+MRUItem16=/DatasmithContent/Materials/FBXImporter/VRED/Plastic
+MRUItem17=/Game/Group_Assets/Tashan/fabriholder/fabhold
+MRUItem18=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem19=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst_Inst_Inst1
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2331,6 +2345,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2.suitcase_low_2;/Engine/Transient.EditorStaticMeshFactory_0
+RecentlyPlaced=/Game/Group_Assets/Tashan/box/luagge2.luagge2;
 RecentlyPlaced=/Game/Group_Assets/Tashan/box/box.box;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainLightBlock.CurtainLightBlock;
@@ -2349,8 +2365,6 @@ RecentlyPlaced=/Game/Group_Assets/PLANTS/leaves_sm_leaf03.leaves_sm_leaf03;
 RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/glassbowl.glassbowl;
 RecentlyPlaced=/Game/Assets/Amy/Asset/jewellery_box/JB_low.JB_low;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/DeerHead/Stag_head_001.Stag_head_001;
-RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/SlouchedPillow.SlouchedPillow;
-RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/mat_lamp_Inst.mat_lamp_Inst;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2617,9 +2631,17 @@ None=======
 /Game/Group_Assets/Tashan/box/box_DefaultMaterial_BaseColor.box_DefaultMaterial_BaseColor=1
 /Game/Group_Assets/Tashan/box/box_DefaultMaterial_Normal.box_DefaultMaterial_Normal=1
 /Game/Group_Assets/Tashan/box/box.box=1
+/Game/Group_Assets/Tashan/box/luagge2_gold_OcclusionRoughnessMetallic.luagge2_gold_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Tashan/box/luagge2_gold_BaseColor.luagge2_gold_BaseColor=1
+/Game/Group_Assets/Tashan/box/luagge2_gold_Normal.luagge2_gold_Normal=1
+/Game/Group_Assets/Tashan/box/luagge2_leather_OcclusionRoughnessMetallic.luagge2_leather_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Tashan/box/mat_lugt1.mat_lugt1=1
+/Game/Group_Assets/Tashan/box/mat_lugt2.mat_lugt2=1
+/Game/Group_Assets/Tashan/box/luagge2.luagge2=1
+/Game/Group_Assets/Tashan/suitcases/suitcase_low_2.suitcase_low_2=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
@@ -2834,7 +2856,7 @@ WindowSize=X=1337.000 Y=777.000
 WindowSize=X=1339.000 Y=779.000
 WindowSize=X=1340.000 Y=780.000
 WindowSize=X=1345.000 Y=785.000
-WindowSize=X=1349.600 Y=789.600
+WindowSize=X=1351.200 Y=791.200
 InitiallyMaximized=True
 InitiallyMaximized=True
 
