--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1480,6 +1480,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 None=======
 None=======
 None=======
@@ -2136,7 +2137,6 @@ MeshSelectionMeshEditActions.MeshEdits=True
 MeshElementsVisualizerProperties.MeshElementVisualization=True
 MeshStatisticsProperties.MeshStatistics=True
 GroupEdgeInsertionProperties.InsertEdge=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2232,7 +2232,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2263,26 +2263,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
-MRUItem1=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
-MRUItem2=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2
-MRUItem5=/Game/Group_Assets/Tashan/box/luagge2
-MRUItem6=/Game/Group_Assets/Tashan/box/mat_lugt2
-MRUItem7=/Game/Group_Assets/Tashan/box/mat_lugt1
-MRUItem8=/Game/Group_Assets/Tashan/box/luagge2_leather_OcclusionRoughnessMetallic
-MRUItem9=/Game/Group_Assets/Tashan/box/luagge2_leather_Normal
-MRUItem10=/Game/Group_Assets/Tashan/box/luagge2_leather_BaseColor
-MRUItem11=/Game/Group_Assets/Tashan/box/luagge2_gold_Normal
-MRUItem12=/Game/Group_Assets/Tashan/box/luagge2_gold_BaseColor
-MRUItem13=/Game/Group_Assets/Tashan/box/luagge2_gold_OcclusionRoughnessMetallic
-MRUItem14=/Game/Cinematics/Sequences/Stairwell_scene_shots/Stairwell_scene_shotsRoot
-MRUItem15=/Game/Group_Assets/Tashan/box/box
-MRUItem16=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem17=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_Normal
-MRUItem18=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_BaseColor
-MRUItem19=/Game/Group_Assets/Tashan/box/mat_box
+MRUItem0=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
+MRUItem1=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
+MRUItem4=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
+MRUItem5=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem6=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2
+MRUItem7=/Game/Group_Assets/Tashan/box/luagge2
+MRUItem8=/Game/Group_Assets/Tashan/box/mat_lugt2
+MRUItem9=/Game/Group_Assets/Tashan/box/mat_lugt1
+MRUItem10=/Game/Group_Assets/Tashan/box/luagge2_leather_OcclusionRoughnessMetallic
+MRUItem11=/Game/Group_Assets/Tashan/box/luagge2_leather_Normal
+MRUItem12=/Game/Group_Assets/Tashan/box/luagge2_leather_BaseColor
+MRUItem13=/Game/Group_Assets/Tashan/box/luagge2_gold_Normal
+MRUItem14=/Game/Group_Assets/Tashan/box/luagge2_gold_BaseColor
+MRUItem15=/Game/Group_Assets/Tashan/box/luagge2_gold_OcclusionRoughnessMetallic
+MRUItem16=/Game/Cinematics/Sequences/Stairwell_scene_shots/Stairwell_scene_shotsRoot
+MRUItem17=/Game/Group_Assets/Tashan/box/box
+MRUItem18=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem19=/Game/Group_Assets/Tashan/box/box_DefaultMaterial_Normal
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2346,6 +2346,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4.CandleHolder4;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2.CandleHolder2;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low.CandleHolder_low;
 RecentlyPlaced=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2.suitcase_low_2;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Group_Assets/Tashan/box/luagge2.luagge2;
@@ -2364,8 +2366,6 @@ RecentlyPlaced=/Game/Assets/Tashan/m_glass_Inst.m_glass_Inst;
 RecentlyPlaced=/Game/Group_Assets/PLANTS/leaves_sm_leaf01.leaves_sm_leaf01;
 RecentlyPlaced=/Game/Group_Assets/PLANTS/leaves_sm_leaf02.leaves_sm_leaf02;
 RecentlyPlaced=/Game/Group_Assets/PLANTS/leaves_sm_leaf03.leaves_sm_leaf03;
-RecentlyPlaced=/Game/Group_Assets/Tashan/consoletable/glassbowl.glassbowl;
-RecentlyPlaced=/Game/Assets/Amy/Asset/jewellery_box/JB_low.JB_low;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2643,6 +2643,8 @@ None=======
 /Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic.CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder.MI_CandleHolder=1
 /Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low.CandleHolder_low=1
+/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2.CandleHolder2=1
+/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4.CandleHolder4=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
