--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,6 @@ LastExecutedLaunchName=SPIRIT_OF_FIRE
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CameraSpeed=2
@@ -454,7 +453,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
 ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CandleHolders
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2263,9 +2262,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
-MRUItem1=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
-MRUItem2=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
+MRUItem2=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
 MRUItem3=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
 MRUItem4=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
 MRUItem5=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic
