--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,30 +167,20 @@ None=======
 None=======
 None=======
 None=======
+None=======
 CurrentPosGridSize=0
 SnapScaleEnabled=False
-<<<<<<< Updated upstream
 CurrentRotGridSize=4
-=======
 CurrentRotGridSize=0
->>>>>>> Stashed changes
 CurrentScalingGridSize=4
 GridEnabled=False
 
 [MRU]
-<<<<<<< Updated upstream
-MRUItem0=/Game/stairwellblock3
-MRUItem1=/Game/abandonedroom_V2
-MRUItem2=/Game/Living_Room
-MRUItem3=/Game/stairwellblock3_2
-MRUItem4=/Game/Attic
-=======
 MRUItem0=/Game/Attic
 MRUItem1=/Game/Living_Room
 MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/abandonedroom_V2
 MRUItem4=/Game/stairwellblock3_2
->>>>>>> Stashed changes
 MRUItem5=/Game/stairwellblock2
 MRUItem6=/Game/Assets/Amy/firstfloor
 MRUItem7=/Game/abandonedroom_Migration
@@ -532,11 +522,9 @@ LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Attic
 LastLevel=/Game/Living_Room
-<<<<<<< Updated upstream
 LastLevel=/Game/stairwellblock3
-=======
 LastLevel=/Game/Attic
->>>>>>> Stashed changes
+None=======
 None=======
 None=======
 None=======
@@ -555,6 +543,7 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
+None=======
 None=======
 None=======
 None=======
@@ -866,18 +855,15 @@ PolygroupLayersProperties="\"Object\" "
 MeshElementsVisualizerProperties="\"Object\" "
 MeshStatisticsProperties="\"Object\" "
 GroupEdgeInsertionProperties="\"Object\" "
-<<<<<<< Updated upstream
 MaterialExpressionVertexColor="\"Object\" "
 MaterialExpressionFresnel="\"Object\" "
 DecalComponent="\"Object\" "
-=======
 ParticleSpriteEmitter="\"Object\" "
 ParticleEmitter="\"Object\" "
 FileMediaSource="\"Object\" "
 BaseMediaSource="\"Object\" "
 MediaSource="\"Object\" "
 MediaPlayer="\"Object\" "
->>>>>>> Stashed changes
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1505,6 +1491,8 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
+None=======
 None=======
 None=======
 None=======
@@ -2161,7 +2149,6 @@ MeshSelectionMeshEditActions.MeshEdits=True
 MeshElementsVisualizerProperties.MeshElementVisualization=True
 MeshStatisticsProperties.MeshStatistics=True
 GroupEdgeInsertionProperties.InsertEdge=True
-<<<<<<< Updated upstream
 MaterialFunction.MaterialFunction=True
 MaterialFunction.Preview=True
 MaterialFunction.Thumbnail=True
@@ -2173,7 +2160,6 @@ DecalComponent.Decal=True
 DecalComponent.Rendering=True
 DecalComponent.Tags=True
 DecalComponent.Cooking=True
-=======
 ParticleSpriteEmitter.Particle=True
 ParticleSpriteEmitter.Cascade=True
 ParticleSpriteEmitter.Significance=True
@@ -2203,7 +2189,6 @@ MediaPlate.Input=True
 MediaPlate.Actor=True
 MediaPlayer.Editor=True
 Texture2D.Interchange =True
->>>>>>> Stashed changes
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2315,7 +2300,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Group_Assets/Webs/Webs_Inst.Webs_Inst
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2331,49 +2315,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-<<<<<<< Updated upstream
-MRUItem0=/Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/MI_Wooden_Chest_ukqiebvbw_2K_Inst
-MRUItem1=/Game/Group_Assets/Tashan/rails/mat_curtain
-MRUItem2=/Game/Group_Assets/Tashan/rails/mat_curtain_Inst
-MRUItem3=/Game/Group_Assets/Tashan/rails/mat_curtain_Inst_Inst
-MRUItem4=/Game/Megascans/3D_Plants/English_Ivy_xfcnebhqx/MI_English_Ivy_xfcnebhqx_4K
-MRUItem5=/Game/Group_Assets/Tashan/rails/curtainsWVP
-MRUItem6=/Bridge/MSPresets/M_MS_Default_Material/Functions/MF_MapAdjustments
-MRUItem7=/Game/MSPresets/M_MS_Surface_Material_VT/M_MS_Surface_Material_VT
-MRUItem8=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K
-MRUItem9=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K_Inst
-MRUItem10=/Game/Group_Materials/Glass/Glass
-MRUItem11=/Game/Group_Materials/Glass/Glass_Inst
-MRUItem12=/Game/Group_Materials/Glass/Glass_Inst_Inst
-MRUItem13=/Game/Group_Assets/Tashan/frames/frames_sm_frame_2_long
-MRUItem14=/Game/Group_Assets/Tashan/frames/frames_sm_frame_2
-MRUItem15=/Game/Group_Assets/Tashan/frames/frames_sm_frame_3
-MRUItem16=/Game/Group_Assets/Tashan/frames/frames_sm_frame_3_long
-MRUItem17=/Game/Group_Assets/Tashan/frames/frames_sm_frame
-MRUItem18=/Game/Group_Assets/Tashan/frames/frames_sm_frame_long
-MRUItem19=/Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_Concrete_Crack_sfelnxg_4K_Inst_Inst
-=======
-MRUItem0=/Game/Group_Assets/Webs/Spider_Web_01
-MRUItem1=/Game/Group_Assets/Webs/Webs_Inst
-MRUItem2=/Game/Group_Assets/Webs/Webs
-MRUItem3=/Game/Group_Assets/Charlotte/Assets/Wisp/Wisp
-MRUItem4=/Game/StarterContent/Particles/P_Ambient_Dust
-MRUItem5=/Game/Living_Room
-MRUItem6=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
-MRUItem7=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
-MRUItem8=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
-MRUItem9=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
-MRUItem10=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem11=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2
-MRUItem12=/Game/Group_Assets/Tashan/box/luagge2
-MRUItem13=/Game/Group_Assets/Tashan/box/mat_lugt2
-MRUItem14=/Game/Group_Assets/Tashan/box/mat_lugt1
-MRUItem15=/Game/Group_Assets/Tashan/box/luagge2_leather_OcclusionRoughnessMetallic
-MRUItem16=/Game/Group_Assets/Tashan/box/luagge2_leather_Normal
-MRUItem17=/Game/Group_Assets/Tashan/box/luagge2_leather_BaseColor
-MRUItem18=/Game/Group_Assets/Tashan/box/luagge2_gold_Normal
-MRUItem19=/Game/Group_Assets/Tashan/box/luagge2_gold_BaseColor
->>>>>>> Stashed changes
+MRUItem0=/Game/Group_Assets/Webs/Webs_Inst5
+MRUItem1=/Game/Group_Assets/Webs/Dust_Web_021
+MRUItem2=/Game/Group_Assets/Webs/Webs_Inst2
+MRUItem3=/Game/Group_Assets/Webs/Webs_Inst3
+MRUItem4=/Game/Group_Assets/Webs/Webs_Inst4
+MRUItem5=/Game/Group_Assets/Webs/Webs_Inst1
+MRUItem6=/Game/Group_Assets/Webs/Spider_Web_01
+MRUItem7=/Game/Group_Assets/Webs/Webs_Inst
+MRUItem8=/Game/Group_Assets/Webs/Webs
+MRUItem9=/Game/Group_Assets/Charlotte/Assets/Wisp/Wisp
+MRUItem10=/Game/StarterContent/Particles/P_Ambient_Dust
+MRUItem11=/Game/Living_Room
+MRUItem12=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4
+MRUItem13=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2
+MRUItem14=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low
+MRUItem15=/Game/Group_Assets/Aziz/Assets/CandleHolders/MI_CandleHolder
+MRUItem16=/Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem17=/Game/Group_Assets/Tashan/suitcases/suitcase_low_2
+MRUItem18=/Game/Group_Assets/Tashan/box/luagge2
+MRUItem19=/Game/Group_Assets/Tashan/box/mat_lugt2
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2394,14 +2355,12 @@ RectLight.Light=True
 SpotLight.Light=True
 ExponentialHeightFog.VolumetricFog=True
 PreviewMaterial.Usage=True
-<<<<<<< Updated upstream
 SphereReflectionCapture.ReflectionCapture=True
-=======
+None=======
 Emitter.LOD=True
 Emitter.Particles=False
 MediaPlayer.Editor=True
 FileMediaSource.File=True
->>>>>>> Stashed changes
 
 [PlacementMode]
 None=======
@@ -2445,7 +2404,7 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< Updated upstream
+None=======
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/MI_Wooden_Chest_ukqiebvbw_2K_Inst.MI_Wooden_Chest_ukqiebvbw_2K_Inst;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_udfkbb2qx/S_Wooden_Chest_udfkbb2qx_lod3.S_Wooden_Chest_udfkbb2qx_lod3;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/S_Wooden_Chest_ukqiebvbw_lod3.S_Wooden_Chest_ukqiebvbw_lod3;
@@ -2466,7 +2425,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/cabinet.cabinet;
 RecentlyPlaced=/Game/Group_Assets/Tashan/rails/minirail.minirail;
 RecentlyPlaced=/Game/Group_Assets/Tashan/frames/frames_sm_frame.frames_sm_frame;
 RecentlyPlaced=/Game/Group_Assets/Tashan/frames/frames_sm_frame_long.frames_sm_frame_long;
-=======
 RecentlyPlaced=/Game/Group_Assets/Webs/Webs.Webs;
 RecentlyPlaced=/Game/Group_Assets/Webs/Spider_Web_01.Spider_Web_01;
 RecentlyPlaced=/Game/Group_Assets/Webs/Webs_Inst.Webs_Inst;
@@ -2487,7 +2445,6 @@ RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLigh
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainLightBlock.CurtainLightBlock;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/CurtainPole/CurtainPole.CurtainPole;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/mat_trim.mat_trim;
->>>>>>> Stashed changes
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2531,6 +2488,7 @@ RecentlyPlaced=/Game/Assets/Tashan/stairs/mat_trim.mat_trim;
 /Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low_DefaultMaterial_OcclusionRoughnessMetallic.Cabinet_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Cabinet/MI_Cabinet.MI_Cabinet=1
 /Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low.Cabinet_low=1
+None=======
 None=======
 None=======
 None=======
@@ -2767,7 +2725,6 @@ None=======
 /Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder_low.CandleHolder_low=1
 /Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder2.CandleHolder2=1
 /Game/Group_Assets/Aziz/Assets/CandleHolders/CandleHolder4.CandleHolder4=1
-<<<<<<< Updated upstream
 /Game/Group_Assets/chrome.chrome=1
 /Game/Megascans/Decals/Concrete_Crack_sfelnxg/MI_Concrete_Crack_sfelnxg_4K_Inst_Inst.MI_Concrete_Crack_sfelnxg_4K_Inst_Inst=1
 /Game/Group_Assets/Tashan/frames/frames_sm_frame_long.frames_sm_frame_long=1
@@ -2785,13 +2742,17 @@ None=======
 /Game/Megascans/3D_Plants/English_Ivy_xfcnebhqx/MI_English_Ivy_xfcnebhqx_4K.MI_English_Ivy_xfcnebhqx_4K=1
 /Game/Group_Assets/Tashan/rails/mat_curtain_Inst_Inst.mat_curtain_Inst_Inst=1
 /Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/MI_Wooden_Chest_ukqiebvbw_2K_Inst.MI_Wooden_Chest_ukqiebvbw_2K_Inst=1
-=======
 /Game/Group_Assets/Webs/Webs.Webs=1
 /Game/Group_Assets/Webs/Webs_Inst.Webs_Inst=1
->>>>>>> Stashed changes
+/Game/Group_Assets/Webs/Webs_Inst2.Webs_Inst2=1
+/Game/Group_Assets/Webs/Webs_Inst1.Webs_Inst1=1
+/Game/Group_Assets/Webs/Webs_Inst4.Webs_Inst4=1
+/Game/Group_Assets/Webs/Webs_Inst3.Webs_Inst3=1
+/Game/Group_Assets/Webs/Dust_Web_021.Dust_Web_021=1
+/Game/Group_Assets/Webs/Webs_Inst5.Webs_Inst5=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -2962,7 +2923,8 @@ ScreenPosition=X=186.667 Y=122.667
 ScreenPosition=X=-7.000 Y=8.000
 ScreenPosition=X=95.000 Y=15.000
 ScreenPosition=X=195.000 Y=2.000
-ScreenPosition=X=183.200 Y=2.400
+ScreenPosition=X=182.667 Y=2.000
+None=======
 None=======
 None=======
 None=======
@@ -3006,11 +2968,8 @@ WindowSize=X=1337.000 Y=777.000
 WindowSize=X=1339.000 Y=779.000
 WindowSize=X=1340.000 Y=780.000
 WindowSize=X=1345.000 Y=785.000
-<<<<<<< Updated upstream
 WindowSize=X=1361.600 Y=801.600
-=======
-WindowSize=X=1354.000 Y=794.000
->>>>>>> Stashed changes
+WindowSize=X=1356.000 Y=796.000
 InitiallyMaximized=True
 InitiallyMaximized=True
 
@@ -3028,11 +2987,10 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-<<<<<<< Updated upstream
 UNR=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content
-=======
 UNR=D:/GroupMorriganHall/MorriganHall/MorriganHall 5.2/Content
->>>>>>> Stashed changes
+None=======
+None=======
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
@@ -3040,7 +2998,6 @@ GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/CurtainPole/C
 GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/CandleHolder/CandleHolder_low.fbx
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
 GenericExport=../../../../../../Users/igfxd/Downloads/blurredstains.PNG
-None=======
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 MeshImportExport=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
@@ -4109,15 +4066,13 @@ DistCurveEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-<<<<<<< Updated upstream
+RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-=======
-RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
->>>>>>> Stashed changes
+None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
